# pyspark-training

./: .gitignore  create_df_from_various_sources.ipynb  dataframe_operations.ipynb  pyproject.toml  pyspark_starter.ipynb  sql_operations.ipynb
dataframes/: dataframes_training.ipynb
resources/products.parquet/: .part-00000-0f2c991d-2e7a-42b3-a398-438c27557bfc-c000.snappy.parquet.crc  part-00000-0f2c991d-2e7a-42b3-a398-438c27557bfc-c000.snappy.parquet
