[tool.poetry]
name = "pyspark-training"
version = "0.1.0"
description = ""
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"
packages = [{include = "pyspark_training"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.5.0"
jupyterlab = "^4.0.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
