[tool.poetry]
name = "pyspark-training"
version = "0.1.0"
description = ""
authors = ["Oveys Safarnejad <safarnejad@outlook.com>"]
readme = "README.md"
packages = [{include = "pyspark_training"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyterlab = "^4.0.8"
pyspark = "3.4.1"
findspark = "2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
